# AutoSDV-book

./: .gitignore  404.html  5g_deployment.html  CLAUDE.md  Makefile  README.md  appendix.html  book-zh-TW.toml  book.toml  book.zh-TW.toml  build_the_vehicle.html  development_guide.html  docker_environment.html  get_started.html  hardware_and_wiring.html  i18n-helpers.toml  index.html  justfile  mkdocs.yml  print.html  pyproject.toml  requirements.txt  searchindex.js  sensor_component.html  sensor_kit.html  sitemap.xml  source_code.html  system_setup.html  toc.html  toc.js  usage.html  vehicle_interface.html  version_control.html
build_the_vehicle/: index.html
platform-models/: index.html
po/: zh-TW.po
replay_simulation/: index.html
scripts/: README.md  audit-translations-ai.py  check-translations.py  fix_po_formatting.py  merge_manual_translations.py  split_for_manual_translation.py  translate_workflow.sh
search/: search_index.json
src/: 2-installation.md  5g_deployment.md  SUMMARY.md  appendix.md  build_the_vehicle.md  core_components.md  development_guide.md  docker_environment.md  docker_setup.md  get_started.md  hardware_and_wiring.md  hardware_assembly.md  index.md  index.zh-TW.md  introduction.md  manual_setup.md  platform-models.md  platform-models.zh-TW.md  platform_models.md  replay_simulation.md  sensor_component.md  sensor_components.md  sensor_kit.md  software_installation.md  source_code.md  system_setup.md  technical_reference.md  usage.md  vehicle_interface.md  vehicle_setup.md  version_control.md  wiring_diagrams.md
zh-TW/: index.html
(+115 files in other folders)
